# SocialNetwork

./: Address.cpp  Address.h  CMakeLists.txt  Company_User.cpp  Company_User.h  Date.cpp  Date.h  Graph.hpp  Group_User.cpp  Group_User.h  Logger.cpp  Logger.h  News.cpp  News.h  README.md  Simple_User.cpp  Simple_User.h  User.cpp  User.h  main.cpp
